# PhenoLeaf-TS

./: .gitignore  CITATION.cff  README.md  index.html  pyproject.toml  requirements.txt
configs/: models.yaml
docs/: CITATION.cff  DATASET.md
huggingface/: README.md
phenoleaf_ts/: __init__.py
phenoleaf_ts/data/: __init__.py  loader.py  prepare.py
phenoleaf_ts/metrics/: __init__.py  classification.py  segmentation.py
phenoleaf_ts/models/: __init__.py
tools/: evaluate.py  prepare_data.py
